# zero2prod

./: Cargo.toml
.github/workflows/: ci.yml  rust.yml
.sqlx/: query-4cc2c6724534e55a1bb8fcce763593987e912bb8cbacbd16372d8056c8867c17.json
migrations/: 20250403130549_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
