[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Guilherme Araújo <guilhermeproencaaraujo@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.9"
log = "0.4"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls", #tells sqlx to use tokio for it's future and rustl as TLS Backend
    "macros", #gives us acces to sqlx::query! and sqlx::query_as!
    "postgres", #for postgres specifics like types
    "uuid", #allows mappings sql uuids to the uuid type from uuid crate
    "chrono", #allows mapping sql timestampz to the DateTimen<T> type from the chrono crate
    "migrate" #gives access to some useful functions also used by sqlx-cli
]


[dev-dependencies]
reqwest = "0.11"